--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ header img {
     text-transform:uppercase;
     padding:0 45px;
     height:90px;
-    font:18px ClioMedium-Medium;
+    font:18px "GloberSemibold","GloberRegular",Helvetica,Arial,sans-serif;
 }
 
 #mainMenu a:hover, a.activeMenu {
@@ -77,7 +77,8 @@ header img {
 }
 
 .block h2 {
-    font:35px ClioMedium-Medium;
+    font-size: 35px;
+    font-family: "GloberSemibold","GloberRegular",Helvetica,Arial,sans-serif;
 }
 
 .blockFoldHold {
