Change home index's layout

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -294,3 +294,7 @@ footer {
 .has-error .checkbox, .has-error .checkbox-inline, .has-error .control-label, .has-error .help-block, .has-error .radio, .has-error .radio-inline, .has-error.checkbox label, .has-error.checkbox-inline label, .has-error.radio label, .has-error.radio-inline label {
     color: #F5FF50;
 }
+
+.text-two-column{
+	column-count: 2;
+}
