--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -292,6 +292,22 @@ footer {
 .text-two-column{
     column-count: 2;
 }
+@media screen and (min-width: $screen-sm-min) {
+    .text-two-column-sm{
+        column-count: 2;
+    }
+}
+@media screen and (min-width: $screen-md-min) {
+    .text-two-column-md{
+        column-count: 2;
+    }
+}
+@media screen and (min-width: $screen-lg-min) {
+    .text-two-column-lg{
+        column-count: 2;
+    }
+}
+
 
 ul.list-dotted-brand{
     list-style: none;
