Mark current item in menu

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,8 +50,11 @@ header img {
     display:block;
     color: #d72626;
     padding:0 45px;
-
 }
+#mainMenu a.active {
+    color: black;
+}
+
 
 a.support-button{
     position: absolute;
