--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -35,6 +35,7 @@ header img {
 #mainMenu {
     float: left;
     font-family: "GloberRegular","helvetica",sans-serif;
+    margin-bottom: 40px;
 }
 
 #mainMenu ul{
@@ -42,7 +43,7 @@ header img {
     flex-wrap: wrap;
     margin: 0;
     list-style: none;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 3;
 }
 
