Tymon daily commit - 26.01

--- a/assets/scss/_freature.scss
+++ b/assets/scss/_freature.scss
@@ -13,7 +13,8 @@
 	@media screen and (min-width: $screen-md-min) {
 		vertical-align: middle;
 		display: table-cell;
-		padding: 50px;
+		padding: 25px;
+		padding-left: 0px;
 	}
 }
 .freature-content{
