--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -364,3 +364,11 @@ ul.list-dotted-brand{
 p{
     margin-bottom: 30px;
 }
+
+.twitter-share-button[style] { vertical-align: text-bottom !important; }
+
+.roksanaBox { background-color: #d9d9d9; }
+
+li.nostyle {
+    list-style-type: none;
+}
