--- a/assets/scss/_grid.scss
+++ b/assets/scss/_grid.scss
@@ -72,6 +72,7 @@
 		border: 20px solid white;
 		border-bottom-color: #808080;
 		border-left-color: #808080;
+		z-index: 100;
 	}
 }
 
@@ -106,6 +107,7 @@
 		border: 20px solid white;
 		border-bottom-color: #808080;
 		border-left-color: #808080;
+		z-index: 100;
 	}
 	.card2--holder{
 		> img{
