--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -29,7 +29,7 @@ $brand-danger:          #d9534f !default;
 //** Background color for `<body>`.
 $body-bg:               #fff !default;
 //** Global text color on `<body>`.
-$text-color:            black !default;
+$text-color:            rgb(76, 76, 76) !default;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
@@ -69,7 +69,7 @@ $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 $headings-font-family:    inherit !default;
 $headings-font-weight:    500 !default;
 $headings-line-height:    1.1 !default;
-$headings-color:          inherit !default;
+$headings-color:          #000 !default;
 
 
 //== Iconography
