Improve footer - add social, small font size for law notice

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -377,3 +377,19 @@ p{
 li.nostyle {
     list-style-type: none;
 }
+.footer-law{
+    font-size: 13px;
+    p{
+    	margin-bottom: 10px;
+    }
+}
+
+.icon-facebook, .icon-twitter{
+   font-size: 1.5em;
+}
+.icon-facebook{
+    color: #3b5998
+}
+.icon-twitter{
+    color: #55acee;
+}
