Square profile picture

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -393,3 +393,14 @@ li.nostyle {
 .icon-twitter{
     color: #55acee;
 }
+
+
+.people-picture{
+    border: 7px solid white;
+    border-radius: 50%;
+    height: auto;
+    margin: 0 auto;
+    max-width: 90%;
+    width: 200px;
+    display: block;
+}
