--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,7 +6,7 @@
 body {
     font:18px ClioRegular;
     background:white;
-    text-shadow: rgba(0,0,0,0.2) 0 0 1px;
+    // text-shadow: rgba(0,0,0,0.2) 0 0 1px;
 }
 
 
