--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,8 +33,8 @@ a:hover,a:visited,a:active {
 .header-top{
     @include clearfix;
 }
-header img {
-    margin:20px;
+.header-top img {
+    margin: 10px;
 }
 
 #mainMenu {
